fix in collapse, tiles

--- a/app/assets/stylesheets/elements/collapse.less
+++ b/app/assets/stylesheets/elements/collapse.less
@@ -20,7 +20,7 @@
       visibility: hidden;
 
       position: absolute;
-      top: @header-height + 10px;
+      top: @header-height;
       width: 100%;
       left: 0px;
       margin: 0px;
